# simple-ecomm

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  run_integration_tests.py  run_tests.py  run_unit_tests.py
.github/workflows/: ci.yml
db/: database.py  models.py  simple-ecomm.db
src/: __init__.py  models.py
src/routes/: __init__.py  cart_routes.py  order_routes.py  product_routes.py  user_routes.py
src/services/: cart_service.py  order_service.py  product_service.py  user_service.py
tests/: test_cart_service.py  test_order_service.py  test_product_service.py  test_user_service.py  test_utils.py
tests/integration/: test_cart.py  test_product.py  test_user.py
tests/unit/: test_product_service.py
utils/: clean_db_products.py
