[tool.poetry]
name = "simple-ecomm"
version = "0.0.1"
package-mode = false
description = "A simple e-commerce backend platform built with Flask and SQLite."
authors = ["Felipe Siconha <felipesiconha@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/fsiconha"
repository = "https://github.com/fsiconha/simple-ecomm"

[tool.poetry.dependencies]
python = "^3.12"
Flask = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
flake8 = "^4.0.1"
pylint = "^2.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
